# training_free_grpo

./: README.md  pyproject.toml
tests/: test_trainer.py
training_free_grpo/: __init__.py  example.py  memory.py  openai_backend.py  reward.py  trainer.py  types.py
training_free_grpo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
