[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "training-free-grpo"
version = "0.1.0"
description = "Reference implementation of Training-Free GRPO concepts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["training_free_grpo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
